assets/_custom.scss
.markdown {
  // custom class
  .text-rare {
    color: var(--gray-500);
  }

  img.img-sm,
  figure.img-sm img {
    max-width: 100px;
    width: 100%;
  }
  img.img-md,
  figure.img-md img {
    max-width: 200px;
    width: 100%;
  }
  img.img-lg,
  figure.img-lg img {
    max-width: 400px;
    width: 100%;
  }

  .table-tight th,
  .table-tight td {
    padding-top: $padding-4;
    padding-bottom: $padding-4;
    border: 0;
  }

  .header-first td:first-child {
    font-weight: bold;
  }
  .header-odd td:nth-child(odd) {
    font-weight: bold;
  }

  .table-car-meta td:last-child {
    color: var(--gray-500);
  }

  // overwrite default
  h3 {
    font-weight: bolder;
  }

  .book-columns > div {
    min-width: $body-min-width * 0.4;
  }

  table th {
    background: color-mix(in srgb, var(--gray-100), var(--gray-200));
  }

  // reset styles settings for details under blockquote
  blockquote details summary:first-child {
    margin-top: -$padding-16;
  }
}

.book-search {
  input {
    border: 0;
  } 
}

